게시판 부분 끝

--- a/src/main/webapp/WEB-INF/resources/css/dumbell.css
+++ b/src/main/webapp/WEB-INF/resources/css/dumbell.css
@@ -55,3 +55,14 @@
         .savebtn{
             margin: 10px;
         }
+.test {
+	width: 80%;
+	text-align: center;
+}
+.test ul li {
+	list-style: none;
+}
+.test ul li a {
+	color: white;
+	
+}
